--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "@angular/router": "^16.1.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "@sweetalert2/ngx-sweetalert2": "^12.2.0",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.27",
     "translate": "^2.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
