--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@sweetalert2/ngx-sweetalert2": "^12.2.0",
+    "ngx-pagination": "^6.0.3",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "sweetalert": "^2.1.2",
