settings.json modified

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,25 +2,23 @@
   "[typescript]": {
     "editor.defaultFormatter": "vscode.typescript-language-features"
   },
-  "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#1b7608",
-    "activityBar.background": "#1b7608",
-    "activityBar.foreground": "#e7e7e7",
-    "activityBar.inactiveForeground": "#e7e7e799",
-    "activityBarBadge.background": "#0a2295",
-    "activityBarBadge.foreground": "#e7e7e7",
-    "commandCenter.border": "#e7e7e799",
-    "sash.hoverBorder": "#1b7608",
-    "statusBar.background": "#104605",
-    "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#1b7608",
-    "statusBarItem.remoteBackground": "#104605",
-    "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#104605",
-    "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#10460599",
-    "titleBar.inactiveForeground": "#e7e7e799"
-  },
-
-
+  // "workbench.colorCustomizations": {
+  //   "activityBar.activeBackground": "#1b7608",
+  //   "activityBar.background": "#1b7608",
+  //   "activityBar.foreground": "#e7e7e7",
+  //   "activityBar.inactiveForeground": "#e7e7e799",
+  //   "activityBarBadge.background": "#0a2295",
+  //   "activityBarBadge.foreground": "#e7e7e7",
+  //   "commandCenter.border": "#e7e7e799",
+  //   "sash.hoverBorder": "#1b7608",
+  //   "statusBar.background": "#104605",
+  //   "statusBar.foreground": "#e7e7e7",
+  //   "statusBarItem.hoverBackground": "#1b7608",
+  //   "statusBarItem.remoteBackground": "#104605",
+  //   "statusBarItem.remoteForeground": "#e7e7e7",
+  //   "titleBar.activeBackground": "#104605",
+  //   "titleBar.activeForeground": "#e7e7e7",
+  //   "titleBar.inactiveBackground": "#10460599",
+  //   "titleBar.inactiveForeground": "#e7e7e799"
+  // },
 }
